# manta-ws

./: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.BK  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json
.github/workflows/: podman-build-push.yml
assets/: README.md  index.html  package-lock.json  package.json  vite.config.js
assets/cama/: package.json
assets/cama/src/router/: index.js
assets/cama/src/views/: CfsSessionLogsView.vue
assets/plugins/: vuetify.js
assets/src/: main.js
assets/src/components/: CfsSessionHttpClient.js  CfsSessionLogs.vue  Console.vue  HsmGroupDetails.vue  HsmGroupHardware.vue  HsmGroupSummary.vue  ListCfsSessions.vue  Login.vue
assets/src/composables/: getAuthToken.js
assets/src/router/: index.js
assets/src/views/: ConsoleView.vue  HsmGroupDetailsView.vue  HsmGroupHardwareView.vue  HsmGroupSummaryView.vue  ListCfsSessionsView.vue  LoginView.vue
scripts/: alps_root_cert.pem  cama.service  config.toml  install.sh
src/: backend_api.rs  backend_dispatcher.rs  error.rs  handlers.rs  http_response.rs  jwt_utils.rs  log.rs  main.rs  manta_backend_dispatcher.rs
src/backend_api/: backend_config.rs  mesa_lib.rs
src/commands/: mod.rs  redfish.rs
src/common/: kafka.rs  mod.rs
src/common/config/: mod.rs  types.rs
src/handlers/: get_kernel_parameters.rs
